# try

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  pytest.ini  requirements.txt
.claude/agents/: auth-auditor.md  fastapi-backend-validator.md  neon-postgres-optimizer.md  nextjs-frontend-dev.md
.claude/skills/auth-skill/: SKILL.md
.claude/skills/backend-core-skill/: SKILL.md
.claude/skills/database-skill/: SKILL.md
.claude/skills/frontend-builder/: SKILL.md
.specify/memory/: constitution.md
docs/: API.md
frontend/: .prettierignore  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: index.ts  useAuth.ts  useTodos.ts
frontend/src/types/: index.ts
history/prompts/003-frontend-app-ux/: 001-frontend-ux-plan-generation.plan.prompt.md  002-frontend-task-generation.tasks.prompt.md
history/prompts/auth-api-security/: 1-auth-api-security-spec.spec.prompt.md  2-auth-security-plan.plan.prompt.md  3-auth-security-tasks.tasks.prompt.md  4-auth-implementation-complete.green.prompt.md
history/prompts/constitution/: 1-constitution-update.constitution.prompt.md
history/prompts/frontend-app-ux/: 1-frontend-ux-spec.spec.prompt.md
history/prompts/todo-fullstack-app/: 1-todo-fullstack-plan.plan.prompt.md  1-todo-fullstack-spec.spec.prompt.md  1-todo-fullstack-tasks.tasks.prompt.md  (+2 more)
specs/002-auth-api-security/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-frontend-app-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-fullstack-app/: spec.md  tasks.md
src/: __init__.py
src/app/: __init__.py  auth.py  config.py  database.py  main.py
tests/: __init__.py  conftest.py  test_auth.py  test_todos.py
(+39 files in other folders)
